# liatrio-dora-api

./: .cspell.yaml  .dockerignore  .env  .env.example  .gitignore  .pre-commit-config.yaml  Build.Dockerfile  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Makefile  README.md  catalog-info.yaml  test_deploy_data.json  test_issue_data.json  test_merge_data.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: build.yml  codeql.yml  lint.yml  release.yml  test.yml
manifests/base/: kustomization.yaml  liatrio-dora-api.yaml  otel-collector.yaml
manifests/env/dev-eks/: routes.yaml
manifests/env/dev-eks/netpol/: liatrio-dora-api.yaml
manifests/env/prod-eks/: secret.yaml
manifests/envs/dev-eks/: kustomization.yaml  routes.yaml  secret.yaml
manifests/envs/dev-eks/netpol/: kustomization.yaml  liatrio-dora-api.yaml
manifests/envs/prod-eks/: kustomization.yaml  routes.yaml  secret.yaml
manifests/envs/prod-eks/netpol/: kustomization.yaml
src/: main.rs
src/helpers/: common.rs  error.rs  event_vendor.rs  gatherer.rs  github.rs  loki.rs  mod.rs  queries.rs  request.rs  response.rs
src/routes/: change_failure_rate.rs  change_lead_time.rs  data.rs  deployment_frequency.rs  health.rs  mod.rs  recover_time.rs  teams.rs
