[package]
name = "liatrio-dora-api"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.37.0", features = ["full"] }
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
axum = "0.7.5"
reqwest = { version = "0.12.4", features = ["json"] }
dotenv = "0.15.0"
anyhow = "1.0.86"
openssl = { version = "0.10", features = ["vendored"] }
chrono = { version = "0.4.38", features = ["serde"] }
dashmap = "6.0.1"