[package]
name = "liatrio-dora-api"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.37.0", features = ["full"] }
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
axum = "0.7.5"
reqwest = { version = "0.12.4", features = ["json"] }
dotenv = "0.15.0"
anyhow = "1.0.86"
openssl = { version = "0.10", features = ["vendored"] }
chrono = { version = "0.4.38", features = ["serde"] }
dashmap = "6.0.1"
log = "0.4.22"
env_logger = "0.11.3"
axum-tracing-opentelemetry = "0.19.0"
init-tracing-opentelemetry = { version = "0.19.0", features = [
  "otlp",
  "tracing_subscriber_ext",
] }
opentelemetry = "0.24.0"
opentelemetry-otlp = { version = "0.17", optional = true }
tracing = "0.1.40"
tracing-opentelemetry-instrumentation-sdk = "0.19.0"
futures = "0.3.30"

[features]
otlp-over-http = [
  "opentelemetry-otlp/reqwest-client",
  "opentelemetry-otlp/reqwest-rustls",
  "opentelemetry-otlp/http-proto",
  "opentelemetry-otlp/tls",
]