[package]
name = "liatrio-dora-api"
version = "1.2.0"
edition = "2021"

[dependencies]
tokio = { version = "1.37.0", features = ["full"] }
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
axum = "0.7.5"
reqwest = { version = "0.12.4", features = ["json"] }
dotenv = "0.15.0"
anyhow = "1.0.86"
openssl = { version = "0.10", features = ["vendored"] }
chrono = { version = "0.4.38", features = ["serde"] }
dashmap = "6.0.1"
log = "0.4.22"
env_logger = "0.11.3"

opentelemetry = "0.29.0"
opentelemetry-otlp = "0.29.0"
opentelemetry_sdk = "0.29.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
tracing-opentelemetry = "0.30.0"
tracing-opentelemetry-instrumentation-sdk = "0.26.0"

futures = "0.3.30"
regex = "1.10.6"

[features]
otlp-over-http = [
  "opentelemetry-otlp/reqwest-client",
  "opentelemetry-otlp/reqwest-rustls",
  "opentelemetry-otlp/http-proto",
  "opentelemetry-otlp/tls",
]
